INB | UX improvements

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -1,5 +1,5 @@
 {
-  "slider.label.money.amount": "Money amount",
+  "slider.label.money.amount": "Loan amount",
   "slider.label.period": "Period",
   "label.currency.euro": "EUR",
   "label.months": "months"
